syntax = "proto3";

import "google/protobuf/timestamp.proto";
// import "google/protobuf/empty.proto";

option go_package = "/src/grpc";

service Users {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc FetchUser(FetchUserRequest) returns (FetchUserResponse);
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message DeleteUserRequest {
    int64 user_id = 1;
    string access_token = 10;
}

message DeleteUserResponse {
    bool status = 1;
    string message = 2;
}

message UpdateUserRequest {
    int64 user_id = 1;
    string name = 2;

    string access_token = 10;
}

message UpdateUserResponse {
    bool status = 1;
    string message = 2;
}

message CreateUserResponse {
    bool status = 1;
    string message = 2;
}

message CreateUserRequest {
    int64 role_id = 1;
    string name = 2;
    string email = 3;
    string password = 4;

    string access_token = 10;
}

message FetchUserResponse {
    bool status = 1;
    string message = 2;
    repeated User data = 3;
}

message GetUserResponse {
    bool status = 1;
    string message = 2;
    UserResponse data = 3;
}

message UserResponse {
    User user = 1;
}

message User {
    int32 role_id = 1;
    string role_name = 2;
    string name = 3;
    string email = 4;
    google.protobuf.Timestamp last_access = 5;
}

message FetchUserRequest {
    string access_token = 1;
}

message GetUserRequest {
    string access_token = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool status = 1;
    string message = 2;
    Token data = 3;
}

message Token {
    string access_token = 1;
}
